# Everything-Website

./: ai.py  config.py  functions.py  main.py  pyproject.toml  routing.py  t.py
templates/: base.html  index.html
